--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -1,15 +1,15 @@
 /* Base colors */
 
 $color-gray1: #101010
-$color-gray2: #323232
-$color-gray3: #545454
-$color-gray4: #767676
-$color-gray5: #989898
-$color-gray6: #bababa
-$color-gray7: #dcdcdc
+$color-gray2: #212121
+$color-gray3: #323232
+$color-gray4: #434343
+
+$color-gray5: #cbcbcb
+$color-gray6: #dcdcdc
+$color-gray7: #ededed
 $color-gray8: #fefefe
 
-$color-blue-light: #bbdefb
 $color-blue: #2196f3
 $color-blue-dark: #0d47a1
 
@@ -18,9 +18,10 @@ $color-green: #4caf50
 
 /* Theme colors */
 
-$color-bg: $color-gray8
+$color-bg: $color-gray2
+$color-bg2: $color-gray3
 
-$color-fg: $color-gray1
+$color-fg: $color-gray8
 
-$color-accent: $color-blue
-$color-accent-off: $color-blue-dark
+$color-accent-off: $color-blue
+$color-accent: $color-blue-dark
