--- a/sass/print.sass
+++ b/sass/print.sass
@@ -1,7 +1,5 @@
-// Global
-
-$color-bg: black
-$color-fg: white
+$color-bg: white
+$color-fg: black
 
 body
   background-color: $color-bg
@@ -11,20 +9,11 @@ body
 .center
   text-align: left
 
-h1, h2, h3
-  margin: 1em .5em 0 0
-
 h1
   text-align: left
 
-hr
-  display: none
-
 blockquote, p, ul
   break-inside: avoid
-
-
-// Header
 
 #header
   width: 30%
@@ -53,9 +42,6 @@ blockquote, p, ul
     &::after
       content: attr(alt)
       font-size: .6em
-
-
-// Content
 
 #content
   width: 100%
