--- a/sass/style.sass
+++ b/sass/style.sass
@@ -39,8 +39,6 @@ nav
   width: 90%
   margin: auto
   display: flex
-  align-items: center
-  justify-content: space-between
   font-size: 1.2em
 
 // Header
@@ -55,7 +53,9 @@ $header-height: 48px
   background-color: $color-gray1
   border-bottom: 1px solid rgba(0, 0, 0, .2)
   display: flex
-  align-items: center
+
+  nav
+    justify-content: space-between
 
 #home
   font-size: 1.25em
