use semantic html elements and simplify styling

--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -10,18 +10,19 @@ $color-gray6: #dcdcdc
 $color-gray7: #ededed
 $color-gray8: #fefefe
 
-$color-blue: #2196f3
 $color-blue-dark: #0d47a1
+$color-blue: #2196f3
 
 $color-green: #4caf50
 
 
 /* Theme colors */
 
+$color-bg-dark: $color-gray1
 $color-bg: $color-gray2
-$color-bg2: $color-gray3
+$color-bg-light: $color-gray3
 
-$color-fg: $color-gray8
+$color-fg: $color-gray7
 
-$color-accent-off: $color-blue
-$color-accent: $color-blue-dark
+$color-accent-dark: $color-blue-dark
+$color-accent: $color-blue
