--- a/templates/shortcodes/section.html
+++ b/templates/shortcodes/section.html
@@ -1,1 +1,1 @@
-<button id="{{ name }}-button" class="section-button {% if active %}selected-section-button{% endif %}" onclick="section_click(event, '{{ name }}')"><h2>{{ name | upper }}</h2></button>
+<button id="{{ name }}-button" class="section-button {% if active %}selected{% endif %}" onclick="section_click(event, '{{ name }}')"><h2>{{ name | upper }}</h2></button>
