--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,4 +1,5 @@
 @import colors
+@import url("/fonts/iosevka/font.css")
 
 
 // Global
@@ -6,12 +7,10 @@
 body
   background-color: $color-bg
   color: $color-fg
-  margin: 0
-  font-family: 'Fira Code', monospace
+  font-family: "Iosevka Extended", monospace;
   font-weight: 400
 
 a
-  text-decoration: none
   font-weight: 700
   color: $color-accent
   &:hover, &:focus, &:active
@@ -19,12 +18,6 @@ a
 
 h1, h2, h3
   margin: 1em .2em
-
-h1
-  text-transform: uppercase
-
-h2, h3
-  display: inline-block
 
 blockquote
   border-left: 2px solid $color-accent
@@ -87,7 +80,6 @@ $header-height: 48px
 
 #personal-photo
   max-width: 100%
-  border-radius: 50%
 
 button
   font-size: 100%
@@ -105,16 +97,17 @@ button
     color: $color-accent
 
 .section
-  margin: 0
   padding: 2em 8%
   background-color: $color-bg-light
-  list-style-type: none
 
-  .subsection
-    padding: 1em 2%
+.section-header
+  display: none
 
-    &:nth-child(even)
-      background-color: $color-bg
+.subsection
+  padding: 1em 2%
+
+  &:nth-child(even)
+    background-color: $color-bg
 
 #education, #work
   display: none
