--- a/templates/404.html
+++ b/templates/404.html
@@ -1,12 +1,9 @@
 {% extends "index.html" %}
 
 {% block title %}
-Page not found - {{ config.title }}
+{{ config.title }} - Page not found
 {% endblock title %}
 
 {% block content %}
-<div class="center">
-  <h1>404</h1>
-  <p>The requested page could not be found</p>
-</div>
+<h1 style="text-align: center">The requested page could not be found</h1>
 {% endblock content %}
