--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,10 @@
 
     <title>{% block title %}{{ config.title }}{% endblock title %}</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Fira+Code:400+700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" media="screen" href="screen.css">
     <link rel="stylesheet" media="print" href="print.css">
+
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
 
