updated status from "doing masters" to "looking for job"

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -78,6 +78,9 @@ $header-height: 48px
   justify-content: center
   text-align: center
 
+  p
+    font-size: 1.2em
+
 #personal-photo
   max-width: 100%
 
