--- a/sass/print.sass
+++ b/sass/print.sass
@@ -10,6 +10,9 @@ a
 h1, h2, h3
   margin: 0
 
+h2
+  font-size: 1.2em
+
 p
   margin: 0.5em 0
 
@@ -26,6 +29,7 @@ blockquote
   width: auto
   height: auto
   position: relative
+  top: 15px
   right: 0px
   float: right
   align-items: right
@@ -34,15 +38,22 @@ blockquote
   .logo-link
     display: block
     svg
-      width: 1em
+      width: 0.8em
     &::after
       content: attr(alt)
-      margin: 0.5em
+      margin: 0.2em
 
 #personal-photo
   float: left
   width: 120px
   margin-right: 10px
+
+#personal-intro
+  p
+    margin: 0.2em 0
+  em
+    font-style: normal
+    font-weight: bold
 
 .section
   margin: 10px 0 0 0
