updated with work experience at Niantic

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,4 +1,4 @@
-@import colors
+@import 'colors'
 @import url("/fonts/iosevka/font.css")
 
 
@@ -7,7 +7,7 @@
 body
   background-color: $color-bg
   color: $color-fg
-  font-family: "Iosevka Extended", monospace;
+  font-family: "Iosevka Extended", monospace
   font-weight: 400
 
 a
@@ -112,7 +112,7 @@ button
   &:nth-child(even)
     background-color: $color-bg
 
-#education, #work
+#projects, #education
   display: none
 
 details
