--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,8 @@
                                alt="{{ config.extra.username }}">
             {% include "logos/github.html" %}
           </a>
-          <a class="logo-link" href="tel:+41764795073"
-                               alt="+41 76 479 50 73">
+          <a class="logo-link" href="tel:+447449320724"
+                               alt="+44 7449 320724">
             {% include "logos/phone.html" %}
           </a>
         </div>
