--- a/sass/print.sass
+++ b/sass/print.sass
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap')
 
 body
-  font-family: "EB Garamond", serif;
+  font-family: "EB Garamond", serif
   font-size: 11pt
 
 a
