changed font from monospace to sans-serif

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,13 +1,12 @@
 @import 'colors'
-@import url("/fonts/iosevka/font.css")
-
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap')
 
 // Global
 
 body
   background-color: $color-bg
   color: $color-fg
-  font-family: "Iosevka Extended", monospace
+  font-family: "Barlow", sans-serif
   font-weight: 400
 
 a
@@ -29,7 +28,6 @@ nav
   margin: auto
   display: flex
   font-size: 1.2em
-
 
 // Header
 
@@ -64,7 +62,6 @@ $header-height: 48px
     .logo-svg
       fill: $color-fg
 
-
 // Content
 
 #content
@@ -77,7 +74,7 @@ $header-height: 48px
   align-items: center
   justify-content: center
   text-align: center
-
+  
   p
     font-size: 1.2em
 
